2013-08-20 Romain Francois <romain@r-enthusiasts.com>

        * include/RcppArmadilloWrap.h: Handle wrap<subview>
        * include/RcppArmadilloWrap.h: cleaner implementation for wrap< SpMat<T> >
        * include/RcppArmadilloAs.h: cleaner implementation for as< SpMat<T> >
        
2013-08-17  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppArmadillo-intro.Rnw: Converted from LaTeX minted
	(which farms out to Python's pygmentize) to LaTeX listings (which is
	plainer, but works on CRAN)
	* DESCRIPTION: Remove 'BuildVignettes: FALSE'

2013-08-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.910.0
	* inst/NEWS: Release 0.3.910.0
	* inst/include/*: Upgraded to new release 3.910.0 of Armadillo
        * debian/*: Similarly updated for new release to Debian

	* vignettes/*: Moved files from inst/doc per new CRAN standards
	* DESCRIPTION: Set 'BuildVignettes: FALSE' as LaTeX minted mode
	creates issues for the CRAN builders
	* inst/doc/*: Include pre-built vignettes

2013-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppArmadilloExtensions/spmat.h: Added basic as<> and
	wrap support for sparse matrices (of class dgCMatrix from the Matrix
	package); currently only type double is supported

	* inst/unitTests/runit.RcppArmadillo.R: Improved test setup a little
	* inst/unitTests/runit.sample.R: Ditto

2013-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.900.7
	* inst/NEWS: Release 0.3.900.7
	* inst/include/*: Upgraded to new release 3.900.7 of Armadillo
        * debian/*: Similarly updated for new release to Debian

2013-08-02 Romain Francois <romain@r-enthusiasts.com>

        * include/RcppArmadillo/Row_meat.h: set vec_state correctly
        * include/RcppArmadillo/Col_meat.h: set vec_state correctly
        * include/RcppArmadillo/Mat_meat.h: set vec_state correctly

2013-07-12  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runTests.R: No longer need to test minimal versions